feat: Phase 3 hardening, Phase 4 tests, security fixes